# rust-r0ket

bildfunk/: Cargo.toml  run.sh
bildfunk/.cargo/: config
bildfunk/src/: main.rs
r0ket-l0dable/: Cargo.toml  l0dable.x
r0ket-l0dable/src/: input.rs  lcd.rs  led.rs  lib.rs  nrf.rs  power.rs  rand.rs  startup.rs  table.rs  time.rs
